decal-macros/tests/ui/fail/top_level_fragment.rs
use decal::decal;

fn main() {
    let _ = decal! {
        Fragment(0)
    };
}
