decal-macros/tests/ui/fail/top_level_fragment.stderr
error: top-level node most not be a fragment
 --> tests/ui/fail/top_level_fragment.rs:5:9
  |
5 |         Fragment(0)
  |         ^^^^^^^^
